--- a/15-1/html/index.html
+++ b/15-1/html/index.html
@@ -12,5 +12,6 @@
 </head>
 <body>
     <p class="p">Это параграф с текстом.</p>
-    <p class="p">Это другой параграф с текстом.</p>
+    <p class="p">Это другой параграф с текстом (коммит).</p>
+    <p class="p">Параграф с текстом, добавленный через гитхаб.</p>
 </body>
